# Webinos-Platform

./: .gitignore  .travis.yml  AUTHORS  FILE_HEADERS  Gruntfile.js  Makefile  NOTICE  README.md  auto-test.sh  binding.gyp  configure  grunt.bat  grunt.js  installer.js  package.json  webinos.gyp  webinos_build  webinos_build.js  webinos_config.Laptop.json  webinos_config.TV.json  webinos_config.WALLET.json  webinos_config.json  webinos_provider.js  webinos_pzh  webinos_pzh.js  webinos_pzp  webinos_pzp.js
demo/: build.xml  pzhpzp.js  startFarm.js  startPzp.js
demo/WindowsHelpers/: 01.StartPZH.bat  02.StartPZP.bat
demo/client/: client.html
experiments/: readme
experiments/Packaging and Configuration/: widget-packaging.sln
experiments/PolicyBuilder/: PolicyBuilder.sln  readme
experiments/PolicyManager_c++_jni/: Android.mk  debug.h  native.cpp  readme
experiments/android-demo/: AndroidManifest.xml  build.xml  local.properties  readme
experiments/bluetooth/: .lock-wscript  bluetooth.cc  bluetooth.js  readme  wscript
experiments/context_manager/: cn_test_queries.js  main.js
experiments/nfc/: .lock-wscript  nfc-print.cc  nfc-print.h  nfc.cc  nfc.js  readme  wscript
experiments/simpleNodeModule/: HelloWorld.cpp  Readme.txt  module.gyp  test.js  vcbuild.bat  wscript
experiments/windowsInstaller/: CreateDis.py  HelperFunctions.nsi  js2c.py  webinos.nsi
tools/: gyp_webinos
webinos/: build.xml  dependencies.json  pom.xml  webinos.js  webinos_main.cc  wscript
webinos/core/api/contacts/test/oldTests/thunderbird_contacts_test/standaloneCpp/: CMakeLists.txt
(+3110 files in other folders)
